--- a/Forms/choosehospitals.ui
+++ b/Forms/choosehospitals.ui
@@ -31,7 +31,9 @@
         </sizepolicy>
        </property>
        <property name="styleSheet">
-        <string notr="true">background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(255, 0, 0, 255), stop:0.853933 rgba(188, 209, 232, 255));</string>
+        <string notr="true">background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(255, 0, 0, 255), stop:0.853933 rgba(188, 209, 232, 255));
+
+border-radius: 7px;</string>
        </property>
        <property name="text">
         <string>Cancel</string>
@@ -47,7 +49,9 @@
         </sizepolicy>
        </property>
        <property name="styleSheet">
-        <string notr="true">background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(255, 255, 255, 255), stop:0.629213 rgba(84, 154, 232, 255));</string>
+        <string notr="true">background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(255, 255, 255, 255), stop:0.629213 rgba(84, 154, 232, 255));
+
+border-radius: 7px;</string>
        </property>
        <property name="text">
         <string>OK</string>
