--- a/Forms/mainwindow.ui
+++ b/Forms/mainwindow.ui
@@ -18,27 +18,14 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="0" column="0">
-     <widget class="QLabel" name="label">
-      <property name="font">
-       <font>
-        <pointsize>20</pointsize>
-        <bold>true</bold>
-        <strikeout>false</strikeout>
-       </font>
-      </property>
-      <property name="layoutDirection">
-       <enum>Qt::LeftToRight</enum>
-      </property>
-      <property name="autoFillBackground">
-       <bool>false</bool>
-      </property>
+    <item row="0" column="2" rowspan="4">
+     <widget class="QLabel" name="label_pic">
       <property name="text">
-       <string>CoviCURE</string>
+       <string/>
       </property>
      </widget>
     </item>
-    <item row="1" column="0" rowspan="2">
+    <item row="3" column="0">
      <layout class="QFormLayout" name="formLayout">
       <item row="0" column="0">
        <widget class="QLabel" name="label_8">
@@ -60,6 +47,12 @@ font: 14pt &quot;Arial Rounded MT Bold&quot;;</string>
       </item>
       <item row="0" column="1">
        <widget class="QPushButton" name="pushButton_Signup_3">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Minimum" vsizetype="MinimumExpanding">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
         <property name="font">
          <font>
           <pointsize>14</pointsize>
@@ -69,7 +62,9 @@ font: 14pt &quot;Arial Rounded MT Bold&quot;;</string>
         </property>
         <property name="styleSheet">
          <string notr="true">background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(255, 255, 255, 255), stop:0.629213 rgba(84, 154, 232, 255));
-font: 14pt&quot;Arial Rounded MT Bold&quot;;</string>
+font: 14pt &quot;Arial Rounded MT Bold&quot;;
+
+border-radius: 5px;</string>
         </property>
         <property name="text">
          <string>Signup</string>
@@ -95,6 +90,12 @@ font: 14pt&quot;Arial Rounded MT Bold&quot;;</string>
       </item>
       <item row="1" column="1">
        <widget class="QPushButton" name="pushButton_Login_3">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Minimum" vsizetype="MinimumExpanding">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
         <property name="font">
          <font>
           <pointsize>14</pointsize>
@@ -104,7 +105,9 @@ font: 14pt&quot;Arial Rounded MT Bold&quot;;</string>
         </property>
         <property name="styleSheet">
          <string notr="true">background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(255, 255, 255, 255), stop:0.629213 rgba(84, 154, 232, 255));
-font: 14pt &quot;Arial Rounded MT Bold&quot;;</string>
+font: 14pt &quot;Arial Rounded MT Bold&quot;;
+
+border-radius: 5px;</string>
         </property>
         <property name="text">
          <string>Login</string>
@@ -130,6 +133,12 @@ font: 14pt &quot;Arial Rounded MT Bold&quot;;</string>
       </item>
       <item row="2" column="1">
        <widget class="QPushButton" name="pushButton_Exit_3">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Minimum" vsizetype="MinimumExpanding">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
         <property name="font">
          <font>
           <pointsize>14</pointsize>
@@ -139,7 +148,9 @@ font: 14pt &quot;Arial Rounded MT Bold&quot;;</string>
         </property>
         <property name="styleSheet">
          <string notr="true">background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(255, 255, 255, 255), stop:0.629213 rgba(84, 154, 232, 255));
-font: 14pt &quot;Arial Rounded MT Bold&quot;;</string>
+font: 14pt &quot;Arial Rounded MT Bold&quot;;
+
+border-radius: 5px;</string>
         </property>
         <property name="text">
          <string>Exit</string>
@@ -148,10 +159,23 @@ font: 14pt &quot;Arial Rounded MT Bold&quot;;</string>
       </item>
      </layout>
     </item>
-    <item row="0" column="2" rowspan="3">
-     <widget class="QLabel" name="label_pic">
+    <item row="0" column="0" rowspan="2">
+     <widget class="QLabel" name="label">
+      <property name="font">
+       <font>
+        <pointsize>20</pointsize>
+        <bold>true</bold>
+        <strikeout>false</strikeout>
+       </font>
+      </property>
+      <property name="layoutDirection">
+       <enum>Qt::LeftToRight</enum>
+      </property>
+      <property name="autoFillBackground">
+       <bool>false</bool>
+      </property>
       <property name="text">
-       <string/>
+       <string>CoviCURE</string>
       </property>
      </widget>
     </item>
@@ -167,6 +191,19 @@ font: 14pt &quot;Arial Rounded MT Bold&quot;;</string>
        <size>
         <width>20</width>
         <height>20</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item row="2" column="0">
+     <spacer name="verticalSpacer">
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>20</width>
+        <height>40</height>
        </size>
       </property>
      </spacer>
