--- a/Forms/signup.ui
+++ b/Forms/signup.ui
@@ -117,6 +117,12 @@
      </item>
      <item row="3" column="1">
       <widget class="QLineEdit" name="lineEdit_password_4">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="font">
         <font>
          <pointsize>9</pointsize>
@@ -124,7 +130,8 @@
         </font>
        </property>
        <property name="styleSheet">
-        <string notr="true">background-color: #fff</string>
+        <string notr="true">background-color: #fff;
+border-radius:5px;</string>
        </property>
        <property name="placeholderText">
         <string>Your Phone number</string>
@@ -153,6 +160,12 @@
        <property name="enabled">
         <bool>true</bool>
        </property>
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="font">
         <font>
          <pointsize>9</pointsize>
@@ -160,7 +173,8 @@
         </font>
        </property>
        <property name="styleSheet">
-        <string notr="true">background-color: #fff</string>
+        <string notr="true">background-color: #fff;
+border-radius:5px;</string>
        </property>
        <property name="placeholderText">
         <string>Your Name</string>
@@ -203,6 +217,12 @@
      </item>
      <item row="1" column="1">
       <widget class="QLineEdit" name="lineEdit_password">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="font">
         <font>
          <pointsize>9</pointsize>
@@ -210,7 +230,8 @@
         </font>
        </property>
        <property name="styleSheet">
-        <string notr="true">background-color: #fff</string>
+        <string notr="true">background-color: #fff;
+border-radius:5px;</string>
        </property>
        <property name="placeholderText">
         <string>Your Surname</string>
@@ -219,6 +240,12 @@
      </item>
      <item row="2" column="1">
       <widget class="QLineEdit" name="lineEdit_password_2">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="font">
         <font>
          <pointsize>9</pointsize>
@@ -226,7 +253,8 @@
         </font>
        </property>
        <property name="styleSheet">
-        <string notr="true">background-color: #fff</string>
+        <string notr="true">background-color: #fff;
+border-radius:5px;</string>
        </property>
        <property name="placeholderText">
         <string>Your Email</string>
@@ -235,6 +263,12 @@
      </item>
      <item row="4" column="1">
       <widget class="QLineEdit" name="lineEdit_password_3">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="font">
         <font>
          <pointsize>9</pointsize>
@@ -242,7 +276,8 @@
         </font>
        </property>
        <property name="styleSheet">
-        <string notr="true">background-color: #fff</string>
+        <string notr="true">background-color: #fff;
+border-radius:5px;</string>
        </property>
        <property name="placeholderText">
         <string>new password</string>
@@ -251,6 +286,12 @@
      </item>
      <item row="5" column="1">
       <widget class="QLineEdit" name="lineEdit_password_5">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="font">
         <font>
          <pointsize>9</pointsize>
@@ -258,7 +299,8 @@
         </font>
        </property>
        <property name="styleSheet">
-        <string notr="true">background-color: #fff</string>
+        <string notr="true">background-color: #fff;
+border-radius:5px;</string>
        </property>
        <property name="placeholderText">
         <string>confirm password</string>
