--- a/Forms/dashboard.ui
+++ b/Forms/dashboard.ui
@@ -6,12 +6,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1262</width>
-    <height>755</height>
+    <width>1400</width>
+    <height>800</height>
    </rect>
   </property>
   <property name="sizePolicy">
-   <sizepolicy hsizetype="MinimumExpanding" vsizetype="Maximum">
+   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
@@ -24,7 +24,7 @@
     <normaloff>../../../Downloads/mask.png</normaloff>../../../Downloads/mask.png</iconset>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color: qradialgradient(spread:reflect, cx:0.5, cy:0.5, radius:0.5, fx:0.5, fy:0.5, stop:0.0113636 rgba(255, 25, 207, 255), stop:1 rgba(53, 120, 255, 255));</string>
+   <string notr="true">background-color: rgb(125, 125, 186);</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
@@ -53,8 +53,8 @@
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>1240</width>
-         <height>694</height>
+         <width>1378</width>
+         <height>739</height>
         </rect>
        </property>
        <layout class="QGridLayout" name="gridLayout_3">
@@ -94,6 +94,9 @@
           <property name="enabled">
            <bool>true</bool>
           </property>
+          <property name="styleSheet">
+           <string notr="true">border-radius: 10px;</string>
+          </property>
           <property name="text">
            <string/>
           </property>
@@ -110,34 +113,6 @@
           <property name="rightMargin">
            <number>60</number>
           </property>
-          <item row="2" column="2">
-           <widget class="QPushButton" name="pushButton_Rapidcovid">
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
-              <horstretch>0</horstretch>
-              <verstretch>20</verstretch>
-             </sizepolicy>
-            </property>
-            <property name="cursor">
-             <cursorShape>PointingHandCursor</cursorShape>
-            </property>
-            <property name="mouseTracking">
-             <bool>true</bool>
-            </property>
-            <property name="autoFillBackground">
-             <bool>false</bool>
-            </property>
-            <property name="styleSheet">
-             <string notr="true">font: 26pt &quot;Cooper Black&quot;;
-color: rgb(255, 255, 255);
-background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0.210227 rgba(57, 230, 255, 255), stop:1 rgba(165, 0, 198, 255));
-border-radius: 6px;</string>
-            </property>
-            <property name="text">
-             <string>Rapid Covid Test</string>
-            </property>
-           </widget>
-          </item>
           <item row="2" column="0">
            <widget class="QPushButton" name="pushButton_Live">
             <property name="sizePolicy">
@@ -162,38 +137,10 @@ border-radius: 6px;</string>
              <string notr="true">font: 26pt &quot;Cooper Black&quot;;
 color: rgb(255, 255, 255);
 background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0.210227 rgba(57, 230, 255, 255), stop:1 rgba(165, 0, 198, 255));
-border-radius: 6px;</string>
+border-radius: 10px;</string>
             </property>
             <property name="text">
              <string>Live Covid Status</string>
-            </property>
-           </widget>
-          </item>
-          <item row="4" column="0">
-           <widget class="QPushButton" name="pushButton_Users">
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
-              <horstretch>0</horstretch>
-              <verstretch>20</verstretch>
-             </sizepolicy>
-            </property>
-            <property name="cursor">
-             <cursorShape>PointingHandCursor</cursorShape>
-            </property>
-            <property name="mouseTracking">
-             <bool>true</bool>
-            </property>
-            <property name="autoFillBackground">
-             <bool>false</bool>
-            </property>
-            <property name="styleSheet">
-             <string notr="true">font: 26pt &quot;Cooper Black&quot;;
-color: rgb(255, 255, 255);
-background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0.210227 rgba(57, 230, 255, 255), stop:1 rgba(165, 0, 198, 255));
-border-radius: 6px;</string>
-            </property>
-            <property name="text">
-             <string>Users</string>
             </property>
            </widget>
           </item>
@@ -234,7 +181,7 @@ border-radius: 6px;</string>
              <string notr="true">font: 26pt &quot;Cooper Black&quot;;
 color: rgb(255, 255, 255);
 background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0.210227 rgba(57, 230, 255, 255), stop:1 rgba(165, 0, 198, 255));
-border-radius: 6px;</string>
+border-radius: 10px;</string>
             </property>
             <property name="text">
              <string>Vaccination</string>
@@ -262,7 +209,7 @@ border-radius: 6px;</string>
              <string notr="true">font: 26pt &quot;Cooper Black&quot;;
 color: rgb(255, 255, 255);
 background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0.210227 rgba(57, 230, 255, 255), stop:1 rgba(165, 0, 198, 255));
-border-radius: 6px;</string>
+border-radius: 10px;</string>
             </property>
             <property name="text">
              <string>Hospitals</string>
@@ -273,34 +220,6 @@ border-radius: 6px;</string>
             </property>
             <property name="shortcut">
              <string>A, I</string>
-            </property>
-           </widget>
-          </item>
-          <item row="4" column="2">
-           <widget class="QPushButton" name="pushButton_New">
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
-              <horstretch>0</horstretch>
-              <verstretch>20</verstretch>
-             </sizepolicy>
-            </property>
-            <property name="cursor">
-             <cursorShape>PointingHandCursor</cursorShape>
-            </property>
-            <property name="mouseTracking">
-             <bool>true</bool>
-            </property>
-            <property name="autoFillBackground">
-             <bool>false</bool>
-            </property>
-            <property name="styleSheet">
-             <string notr="true">font: 26pt &quot;Cooper Black&quot;;
-color: rgb(255, 255, 255);
-background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0.210227 rgba(57, 230, 255, 255), stop:1 rgba(165, 0, 198, 255));
-border-radius: 6px;</string>
-            </property>
-            <property name="text">
-             <string>place holder</string>
             </property>
            </widget>
           </item>
@@ -336,6 +255,34 @@ border-radius: 6px;</string>
             </property>
            </spacer>
           </item>
+          <item row="2" column="2">
+           <widget class="QPushButton" name="pushButton_Rapidcovid">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+              <horstretch>0</horstretch>
+              <verstretch>20</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="cursor">
+             <cursorShape>PointingHandCursor</cursorShape>
+            </property>
+            <property name="mouseTracking">
+             <bool>true</bool>
+            </property>
+            <property name="autoFillBackground">
+             <bool>false</bool>
+            </property>
+            <property name="styleSheet">
+             <string notr="true">font: 26pt &quot;Cooper Black&quot;;
+color: rgb(255, 255, 255);
+background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0.210227 rgba(57, 230, 255, 255), stop:1 rgba(165, 0, 198, 255));
+border-radius: 10px;</string>
+            </property>
+            <property name="text">
+             <string>Rapid Covid Test</string>
+            </property>
+           </widget>
+          </item>
          </layout>
         </item>
        </layout>
@@ -349,7 +296,7 @@ border-radius: 6px;</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1262</width>
+     <width>1400</width>
      <height>17</height>
     </rect>
    </property>
