--- a/Forms/dashboard.ui
+++ b/Forms/dashboard.ui
@@ -20,8 +20,8 @@
    <string>Dashboard</string>
   </property>
   <property name="windowIcon">
-   <iconset>
-    <normaloff>../../../Downloads/mask.png</normaloff>../../../Downloads/mask.png</iconset>
+   <iconset resource="../resource.qrc">
+    <normaloff>:/resources/img/mask.png</normaloff>:/resources/img/mask.png</iconset>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: rgb(125, 125, 186);</string>
@@ -95,7 +95,7 @@
            <bool>true</bool>
           </property>
           <property name="styleSheet">
-           <string notr="true">border-radius: 10px;</string>
+           <string notr="true">border-radius: 20px;</string>
           </property>
           <property name="text">
            <string/>
@@ -137,7 +137,9 @@
              <string notr="true">font: 26pt &quot;Cooper Black&quot;;
 color: rgb(255, 255, 255);
 background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0.210227 rgba(57, 230, 255, 255), stop:1 rgba(165, 0, 198, 255));
-border-radius: 10px;</string>
+border-radius: 10px;
+background0color::hover: 
+background-color: qradialgradient(spread:reflect, cx:0.5, cy:0.5, radius:0.5, fx:0.5, fy:0.5, stop:0.0113636 rgba(255, 25, 92, 255), stop:1 rgba(0, 85, 255, 255));</string>
             </property>
             <property name="text">
              <string>Live Covid Status</string>
@@ -209,7 +211,9 @@ border-radius: 10px;</string>
              <string notr="true">font: 26pt &quot;Cooper Black&quot;;
 color: rgb(255, 255, 255);
 background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0.210227 rgba(57, 230, 255, 255), stop:1 rgba(165, 0, 198, 255));
-border-radius: 10px;</string>
+border-radius: 10px;
+background0color::hover: 
+background-color: qradialgradient(spread:reflect, cx:0.5, cy:0.5, radius:0.5, fx:0.5, fy:0.5, stop:0.0113636 rgba(255, 25, 92, 255), stop:1 rgba(0, 85, 255, 255));</string>
             </property>
             <property name="text">
              <string>Hospitals</string>
@@ -321,6 +325,8 @@ border-radius: 10px;</string>
    </property>
   </action>
  </widget>
- <resources/>
+ <resources>
+  <include location="../resource.qrc"/>
+ </resources>
  <connections/>
 </ui>
