--- a/Forms/login.ui
+++ b/Forms/login.ui
@@ -206,7 +206,7 @@ border-radius: 6px;</string>
     </layout>
    </item>
    <item row="0" column="1">
-    <widget class="QLabel" name="label_3">
+    <widget class="QLabel" name="picture">
      <property name="text">
       <string/>
      </property>
